Fix layout bug.

--- a/assets/sass/layout/_main-content-wrapper.scss
+++ b/assets/sass/layout/_main-content-wrapper.scss
@@ -8,7 +8,7 @@
 
 	padding: 2em;
 	width: 100%;
-	min-height: 100%;
+	min-height: 100vh;
 	background: _palette(bg-overlay-alt-min);
 
     @include breakpoint(medium) {
